2001-02-15  Mark Mitchell  <mark@codesourcery.com>

	* invoke.texi (--param): Document.

Thu Feb 15 15:16:38 2001  Alexandre Oliva  <aoliva@redhat.com>

	* config/sh/sh.h (BOOL_TYPE_SIZE): Don't define.

Thu Feb 15 10:52:31 CET 2001  Jan Hubicka  <jh@suse.cz>

	* i386.md (extendsfdf2_2): Fix constraints.

Thu Feb 15 09:46:21 CET 2001  Jan Hubicka  <jh@suse.cz>

	* i386.md (fop_df_3 splitter): Fix operand number.

Wed Feb 14 12:37:37 CET 2001  Jan Hubicka  <jh@suse.cz>

	* invoke.texi (-mreg-alloc): Nuke.
	* i386.c (ix86_reg_alloc_order, regs_allocated,
	order_regs_for_local_alloc): Nuke.
	(override_options): Kill reg_alloc code.
	* i386.h (TARGET_OPTIONS): Kill reg-alloc.
	(REG_ALLOC_ORDER): SSE goes before I387.
	(ORDER_REGS_FOR_LOCAL_ALLOC): Kill.
	(ix86_reg_alloc_order): Likewise.
	* i386-protos.h (ix86_reg_alloc_order): Kill.

2001-02-14  Richard Henderson  <rth@redhat.com>

	* toplev.c (f_options): Clarify -fschedule-insns2 documentation.

Wed Feb 14 11:59:58 CET 2001  Jan Hubicka  <jh@suse.cz>

	* i386.h (RETURN_IN_MEMORY): Fix formating; reject TFmodes

Wed Feb 14 11:12:38 CET 2001  Jan Hubicka  <jh@suse.cz>

	* i386-protos.h (ix86_memory_move_cost): Move offline.
	* i386.c (ix86_register_move_cost): Compute properly cost of
	SSE, MMX and i387 instructions.
	(*_cost): Add costs of SSE/MMX moves.
	(ix86_memory_move_cost): Move offline from ....; Likewise.
	* i386.h (MEMORY_MOVE_COST): .... here;
	(struct processor costs): Add new fields to represent costs
	of SSE/MMX moves.

Wed Feb 14 10:08:26 CET 2001  Jan Hubicka  <jh@suse.cz>

	* regclass.c (init_reg_sets_1): Reinstall the optimization of
	move_cost together with Matt Kraai's fix.

2001-02-14  Jeffrey Oldham  <oldham@codesourcery.com>

	* Makefile.in (OBJS): Add params.o.

2001-02-14  Richard Henderson  <rth@redhat.com>
	    DJ Delorie  <dj@redhat.com>

	* jump.c (jump_optimize_1): When we delete a conditional jump
	preceeding a non-conditional jump to effectively the same place,